--- a/src/express/templates/partials/popular-articles.pug
+++ b/src/express/templates/partials/popular-articles.pug
@@ -12,3 +12,5 @@ section.main-page__hot.hot
             sup.hot__link-sup #{article.count}
         // li.hot__list-item.hot__list-item--margin
         // li.hot__list-item.hot__list-item--end
+  else
+    p Здесь пока ничего нет
