--- a/src/express/templates/main/register.pug
+++ b/src/express/templates/main/register.pug
@@ -5,23 +5,27 @@ block content
     section.popup.popup--registration.popup--anti
       h1.popup__title Регистрация
       .popup__form.popup__form--active.form.form--register
-        form(action='/register' method='POST')
+        form(
+          action='/register'
+          method='POST'
+          enctype='multipart/form-data'
+        )
           input(type="hidden" name="_csrf" value=csrfToken)
           .form__field
             label
-              input(type='email' name='email' placeholder='Электронная почта' required='' autofocus)
+              input(type='email' name='email' placeholder='Электронная почта' required autofocus)
           .form__field
             label
-              input(type='text' name='name' placeholder='Имя' required='')
+              input(type='text' name='name' placeholder='Имя' required)
           .form__field
             label
               input(type='text' name='surname' placeholder='Фамилия' required)
           .form__field
             label
-              input(type='password' name='password' placeholder='Пароль' required='')
+              input(type='password' name='password' placeholder='Пароль' required)
           .form__field
             label
-              input(type='password' name='passwordRepeated' placeholder='Повтор пароля' required='')
+              input(type='password' name='passwordRepeated' placeholder='Повтор пароля' required)
 
           if validationMessages
             .form__validation-error
@@ -34,7 +38,7 @@ block content
             a.form__avatar.avatar
               img(src='img/icons/smile.svg' alt='аватар пользователя')
             label
-              input.visually-hidden(type='file' name='avatar' required)
+              input.visually-hidden(type='file' name='avatar')
               | Загрузить фото профиля
 
           button.form__submit-btn.form__submit-btn--register.button.button--colored(type='submit') Зарегистрироваться
