--- a/src/express/templates/partials/header.pug
+++ b/src/express/templates/partials/header.pug
@@ -22,7 +22,10 @@ header(class={header: true, 'header--logged': user})
         li.header__list-item
           a.header__exit(href='/logout') Выход
     a.header__avatar.avatar
-      img(src=`/img/${user.avatar}` alt="Аватар пользователя")
+      img.avatar__picture(
+        src=`/img/${user.avatar}`
+        alt="Аватар пользователя"
+      )
   else
     nav.header__nav
       ul.header__nav-list
