--- a/src/express/templates/partials/main/templates/last-comment-template.pug
+++ b/src/express/templates/partials/main/templates/last-comment-template.pug
@@ -1,4 +1,4 @@
-template(id='comment-template')
+template(id='last-comment-template')
   li.last__list-item
     img.last__list-image.avatar(
       src=`/img/avatar-1.png`
