Fix category actions after folder rename

--- a/src/express/templates/my/categories.pug
+++ b/src/express/templates/my/categories.pug
@@ -5,7 +5,7 @@ block content
     section.main-page__category.category
       h1.category__title Категории
       .category__add-form
-        form(action='/categories' method='POST')
+        form(action='/my/categories' method='POST')
           input(type="hidden" name="_csrf" value=csrfToken)
           input#add-form-add-category(
             type='text'
@@ -24,7 +24,7 @@ block content
           each category in categories
             li.category__list-item(id=`category${category.id}`)
               - const wasEdited = category.id === Number(editedId);
-              form(action=`/categories/${category.id}` method='POST')
+              form(action=`/my/categories/${category.id}` method='POST')
                 input(type="hidden" name="_csrf" value=csrfToken)
                 input(
                   type='hidden'
