--- a/src/express/templates/mixins/index.pug
+++ b/src/express/templates/mixins/index.pug
@@ -1,4 +1,4 @@
 include ./format-date.pug
 include ./pagination.pug
-include ./insertErrorMessages.pug
+include ./insert-error-messages.pug
 include ./comment.pug
